<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.simplebluetooth.HelpActivity"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <TextView
            android:id="@+id/help_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/help_paragraph_0"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/help_formula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/help_desc"
            android:padding="10dp"
            android:text="@string/help_paragraph_1"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/help_formula"
            android:stretchColumns="*">
            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/cell_shape"
                    android:padding="3dip"
                    android:text="@string/help_cell_0_0"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/cell_shape"
                    android:padding="3dip"
                    android:text="@string/help_cell_0_1"
                    android:textSize="20sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/cell_shape"
                    android:padding="3dip"
                    android:text="@string/help_cell_0_2"
                    android:textSize="20sp" />
            </TableRow>
            <TableRow>
                    <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="3dip"
                    android:text="@string/help_cell_1_0"
                    android:textSize="15sp" />
                    <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="3dip"
                    android:text="@string/help_cell_1_1"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="3dip"
                    android:text="@string/help_cell_1_2"
                    android:textSize="15sp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="3dip"
                    android:text="@string/help_cell_2_0"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="3dip"
                    android:text="@string/help_cell_2_1"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="3dip"
                    android:text="@string/help_cell_2_2"
                    android:textSize="15sp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="3dip"
                    android:text="@string/help_cell_3_0"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="3dip"
                    android:text="@string/help_cell_3_1"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="3dip"
                    android:text="@string/help_cell_3_2"
                    android:textSize="15sp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="3dip"
                    android:text="@string/help_cell_4_0"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="3dip"
                    android:text="@string/help_cell_4_1"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="3dip"
                    android:text="@string/help_cell_4_2"
                    android:textSize="15sp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="3dip"
                    android:text="@string/help_cell_5_0"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="3dip"
                    android:text="@string/help_cell_5_1"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="3dip"
                    android:text="@string/help_cell_5_2"
                    android:textSize="15sp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="3dip"
                    android:text="@string/help_cell_6_0"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="3dip"
                    android:text="@string/help_cell_6_1"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="3dip"
                    android:text="@string/help_cell_6_2"
                    android:textSize="15sp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="3dip"
                    android:text="@string/help_cell_7_0"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="3dip"
                    android:text="@string/help_cell_7_1"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="3dip"
                    android:text="@string/help_cell_7_2"
                    android:textSize="15sp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="3dip"
                    android:text="@string/help_cell_8_0"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="3dip"
                    android:text="@string/help_cell_8_1"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="3dip"
                    android:text="@string/help_cell_8_2"
                    android:textSize="15sp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="3dip"
                    android:text="@string/help_cell_9_0"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="3dip"
                    android:text="@string/help_cell_9_1"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="3dip"
                    android:text="@string/help_cell_9_2"
                    android:textSize="15sp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="3dip"
                    android:text="@string/help_cell_10_0"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="3dip"
                    android:text="@string/help_cell_10_1"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="3dip"
                    android:text="@string/help_cell_10_2"
                    android:textSize="15sp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="3dip"
                    android:text="@string/help_cell_11_0"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="3dip"
                    android:text="@string/help_cell_11_1"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="3dip"
                    android:text="@string/help_cell_11_2"
                    android:textSize="15sp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="3dip"
                    android:text="@string/help_cell_12_0"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="3dip"
                    android:text="@string/help_cell_12_1"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="3dip"
                    android:text="@string/help_cell_12_2"
                    android:textSize="15sp" />
            </TableRow>
            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="3dip"
                    android:text="@string/help_cell_13_0"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="3dip"
                    android:text="@string/help_cell_13_1"
                    android:textSize="15sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/cell_shape"
                    android:padding="3dip"
                    android:text="@string/help_cell_13_2"
                    android:textSize="15sp" />
            </TableRow>
        </TableLayout>
    </RelativeLayout>
</ScrollView>